# artificial-intelligence-hw

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
homework_01/: README.md  solution.py  test_solution.py
homework_02/: README.md  solution.cpp  solution.py
homework_03/: README.md  solution.py
homework_04/: README.md  solution.py
homework_05/: README.md  solution.py
homework_05/data/: README.md  voting_records.csv
homework_06/: README.md  solution.py
homework_06/data/: README.md  breast_cancer.csv
homework_07/: README.md  solution.py
