[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hristiyan Genchev"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
